--- a/src/app/work/projects/deeprankai.mdx
+++ b/src/app/work/projects/deeprankai.mdx
@@ -1,7 +1,7 @@
 ---
 title: "DeepRankAI"
 publishedAt: "2025-04-24"
-summary: "AI Humanization Tool for SEO"
+summary: "AI Humanization Tools"
 description: "DeepRankAI is an advanced tool designed to optimize SEO rankings by analyzing massive datasets to provide actionable strategies for improving website visibility."
 images:
   - "/deeprankai.png"
